<resources>
    <string name="app_name">বন্ধন</string>
    <string name="Rate">রেট দিন</string>
    <string name="yes">হ্যাঁ</string>
    <string name="no">না</string>
    <string name="Thirty">৩০ কেজি</string>
    <string name="thirtyone">৩১ কেজি</string>
    <string name="thirty2">৩২ কেজি</string>
    <string name="thirtythree">৩৩ কেজি</string>
    <string name="thirtyfour">৩৪ কেজি</string>
    <string name="thirty5">৩৫ কেজি</string>
    <string name="thirtysix">৩৬ কেজি</string>
    <string name="onehundredthirty">১৩০ কেজি</string>
    <string name="one">১</string>
    <string name="two">২</string>
    <string name="three">৩</string>
    <string name="four">৪</string>
    <string name="five">৫</string>
    <string name="six">৬</string>
    <string name="seven">৭</string>
    <string name="eight">৮</string>
    <string name="nine">৯</string>
    <string name="ten">১০</string>
    <string name="nosister">বোন নেই</string>
    <string name="saving">Saving..</string>
    <string name="dhaka">ঢাকা বিভাগ</string>
    <string name="khulna">খুলনা বিভাগ</string>
    <string name="rajshahi">রাজশাহী বিভাগ</string>
    <string name="chittagong">চট্টগ্রাম বিভাগ</string>
    <string name="Barisal">বরিশাল বিভাগ</string>
    <string name="Moymonsingh">ময়মনসিংহ বিভাগ</string>
    <string name="Rangpur">রংপুর বিভাগ</string>
    <string name="Sylet">সিলেট বিভাগ</string>
    <string name="fullname">সম্পূর্ণ নাম *</string>
    <string name="father_mother_exist">বাবা/মা আছে/নেই</string>
    <string name="save">সংরক্ষণ</string>
    <string name="sign_in_to_continue">চালিয়ে যেতে সাইন ইন করুন!</string>
    <string name="e_mail">ই-মেইল</string>
    <string name="password">পাসওয়ার্ড</string>
    <string name="forgot_password">পাসওয়ার্ড ভুলে গেছেন?</string>
    <string name="sign_in">সাইন ইন করুন</string>
    <string name="not_registered">নিবন্ধিত না?</string>
    <string name="sign_up">নিবন্ধন করুন</string>
    <string name="or">বা</string>
    <string name="continue_with">সাথে চালিয়ে যান</string>
    <string name="phone">ফোন</string>
    <string name="google">গুগল</string>
    <string name="sign_up_to_continue">চালিয়ে যেতে সাইন আপ করুন!</string>
    <string name="already_registered">ইতিমধ্যে নিবন্ধভুক্ত?</string>
    <string name="setting">সেটিংস</string>
    <string name="app">অ্যাপ</string>
    <string name="terms">টার্মস এন্ড কন্ডিশন</string>
    <string name="share">শেয়ার দিন</string>
    <string name="feedback">ফিডবেক</string>
    <string name="policy">প্রাইভেসি পলিসি</string>
    <string name="account">একাউন্ট</string>
    <string name="logout">লগ আউট</string>
    <string name="coxbazar">কক্সবাজার</string>
    <string name="kishorgng">কিশোরগঞ্জ</string>
    <string name="kurigram">কুড়িগ্রাম</string>
    <string name="cummila">কুমিল্লা</string>
    <string name="kustia">কুষ্টিয়া</string>
    <string name="khagra">খাগড়াছড়ি</string>
    <string name="gai">গাইবান্ধা</string>
    <string name="gazipur">গাজীপুর</string>
    <string name="chadpur">চাঁদপুর</string>
    <string name="chapai">চাঁপাইনবাবগঞ্জ</string>
    <string name="joypurhat">জয়পুরহাট</string>
    <string name="jamalpur">জামালপুর</string>
    <string name="tangail">টাঙ্গাইল</string>
    <string name="dinajpur">দিনাজপুর</string>
    <string name="naogaon">নওগাঁ</string>
    <string name="feni">ফেনী</string>
    <string name="bogura">বগুড়া</string>
    <string name="borguna">বরগুনা</string>
    <string name="hobigong">হবিগঞ্জ</string>
    <string name="jessore">যশোর</string>
    <string name="mul">মৌলভীবাজার</string>
    <string name="married">বিবাহিত</string>
    <string name="unmarried">অবিবাহিত</string>
    <string name="divorced">ডিভোর্সড</string>
    <string name="bidhoba">বিধবা</string>
    <string name="biptnik">বিপত্নীক</string>
    <string name="exityouwant">আপনি প্রস্থান করতে চান?</string>
    <string name="general">জেনারেল</string>
    <string name="madrasa">মাদ্রাসা</string>
    <string name="alldiv">সকল বিভাগ</string>
    <string name="dhka_div">ঢাকা বিভাগ</string>
    <string name="khula_div">খুলনা বিভাগ</string>
    <string name="raj_div">রাজশাহী বিভাগ</string>
    <string name="chitta_div">চট্টগ্রাম বিভাগ</string>
    <string name="barsal_div">বরিশাল বিভাগ</string>
    <string name="moyman_div">ময়মনসিংহ বিভাগ</string>
    <string name="rangpur_div">রংপুর বিভাগ</string>
    <string name="sylet_div">সিলেট বিভাগ</string>
    <string name="konomittha">কোনো মিথ্যা তথ্য দিয়ে থাকলে তার দুনিয়াবী ও আখিরাতের দায়ভার ওয়েবসাইট কর্তৃপক্ষ নিবে না। আপনি কি রাজি? *</string>
    <string name="sopoth">আল্লাহ\'র শপথ করে সাক্ষ্য দিন, যে তথ্যগুলো দিচ্ছেন সব সত্য? *</string>
    <string name="nirbacon">নির্বাচন করুন</string>
    <string name="article">আর্টিকেল</string>
    <string name="profile_update">প্রোফাইল আপডেট</string>
    <string name="next">পরবর্তী</string>
    <string name="password_rec">পাসওয়ার্ড পুনরুদ্ধার</string>
    <string name="hint_rec">আপনার পাসওয়ার্ড রিসেট করার জন্য একটি লিঙ্ক আপনার ইমেল ঠিকানায় পাঠানো হবে!</string>
    <string name="send">পাঠান</string>
    <string name="qna">প্রশ্ন ও উত্তর</string>
    <string name="bright">উজ্জ্বল ফর্সা</string>
    <string name="shamla">উজ্জ্বল শ্যামলা</string>
    <string name="black">কালো</string>
    <string name="white">ফর্সা</string>
    <string name="shaml">শ্যামলা</string>
    <string name="answer">উত্তর</string>
    <string name="pray">প্রতিদিন পাঁচ ওয়াক্ত নামাজ পড়া হয় ? *</string>
    <string name="sopot">আল্লাহ\'র শপথ করে সাক্ষ্য দিন, যে তথ্যগুলো দিচ্ছেন সব সত্য? *</string>
    <string name="mithha">কোনো মিথ্যা তথ্য দিয়ে থাকলে তার দুনিয়াবী ও আখিরাতের দায়ভার ওয়েবসাইট কর্তৃপক্ষ নিবে না। আপনি কি রাজি? *</string>
</resources>