<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorCard"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="60dp"
        app:cardCornerRadius="6dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/rg_currentDivision"
                    android:paddingLeft="16dp">

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:text="@string/dhka_div"
                        android:paddingLeft="24dp"
                        android:fontFamily="@font/liaoirrit_reg"
                        android:textColor="@color/colorText"
                        android:textSize="18sp">

                    </RadioButton>

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:text="@string/khula_div"
                        android:fontFamily="@font/liaoirrit_reg"
                        android:paddingLeft="24dp"
                        android:textColor="@color/colorText"
                        android:textSize="18sp">

                    </RadioButton>

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:text="@string/raj_div"
                        android:fontFamily="@font/liaoirrit_reg"
                        android:paddingLeft="24dp"
                        android:textColor="@color/colorText"
                        android:textSize="18sp">

                    </RadioButton>

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:text="@string/chitta_div"
                        android:paddingLeft="24dp"
                        android:fontFamily="@font/liaoirrit_reg"
                        android:textColor="@color/colorText"
                        android:textSize="18sp">

                    </RadioButton>

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:text="@string/barsal_div"
                        android:paddingLeft="24dp"
                        android:fontFamily="@font/liaoirrit_reg"
                        android:textColor="@color/colorText"
                        android:textSize="18sp">

                    </RadioButton>

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:text="@string/moyman_div"
                        android:paddingLeft="24dp"
                        android:fontFamily="@font/liaoirrit_reg"
                        android:textColor="@color/colorText"
                        android:textSize="18sp">

                    </RadioButton>

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:text="@string/rangpur_div"
                        android:paddingLeft="24dp"
                        android:fontFamily="@font/liaoirrit_reg"
                        android:textColor="@color/colorText"
                        android:textSize="18sp">

                    </RadioButton>

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:text="@string/sylet_div"
                        android:paddingLeft="24dp"
                        android:fontFamily="@font/liaoirrit_reg"
                        android:textColor="@color/colorText"
                        android:textSize="18sp">

                    </RadioButton>

                </RadioGroup>

            </LinearLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

</LinearLayout>