<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorCard"
        app:cardCornerRadius="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/rg_maritalCondition"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="16dp">

                <RadioButton
                    android:id="@+id/biodata1"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:fontFamily="@font/liaoirrit_light"
                    android:paddingLeft="24dp"
                    android:text="@string/married"
                    android:textColor="@color/colorText"
                    android:textSize="18sp">

                </RadioButton>

                <RadioButton
                    android:id="@+id/biodata2"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:fontFamily="@font/liaoirrit_light"
                    android:paddingLeft="24dp"
                    android:text="@string/unmarried"
                    android:textColor="@color/colorText"
                    android:textSize="18sp">

                </RadioButton>

                <RadioButton
                    android:id="@+id/biodata3"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:fontFamily="@font/liaoirrit_light"
                    android:paddingLeft="24dp"
                    android:text="@string/divorced"
                    android:textColor="@color/colorText"
                    android:textSize="18sp">

                </RadioButton>

                <RadioButton
                    android:id="@+id/biodata4"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:fontFamily="@font/liaoirrit_light"
                    android:paddingLeft="24dp"
                    android:text="@string/bidhoba"
                    android:textColor="@color/colorText"
                    android:textSize="18sp">

                </RadioButton>

                <RadioButton
                    android:id="@+id/biodata5"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:fontFamily="@font/liaoirrit_light"
                    android:paddingLeft="24dp"
                    android:text="@string/biptnik"
                    android:textColor="@color/colorText"
                    android:textSize="18sp">

                </RadioButton>

            </RadioGroup>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>